minecraft/minecraft-tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-tcproute
  namespace: minecraft
spec:

  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: mcrouter

  rules:
     - backendRefs:
        - name: mc-router
          namespace: minecraft
          port: 25565
